--- a/css/certificar.css
+++ b/css/certificar.css
@@ -6,6 +6,7 @@
 
 body {
     padding-top: 0px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    font-family: 'Open Sans';
 }
 
 .thumbnail img {
