font and accordion

--- a/css/certificar.css
+++ b/css/certificar.css
@@ -4,9 +4,17 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
+
+ @font-face {
+   font-family: 'Museo Slab';
+   font-style: normal;
+   font-weight: normal;
+   src: local('Museo Slab'), url('../fonts/MuseoSans_500.otf') format('opentype');
+ }
+
 body {
     padding-top: 0px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    font-family: 'Open Sans';
+    font-family: 'Museo Slab';
 }
 
 .thumbnail img {
